--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ HOST=0.0.0.0
 PORT=3000
 # Uncomment the next line if you want to use HTTPS
 # HTTPS=true
+REACT_APP_CLERK_PUBLISHABLE_KEY=pk_test_bWF0dXJlLW11c3RhbmctMTIuY2xlcmsuYWNjb3VudHMuZGV2JA
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bWF0dXJlLW11c3RhbmctMTIuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_FTtl0HwO5uk7d4Xzm2cO0hJxTz8VK98RFXYEMKtUCm
