rebrand to Twiix

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "reddgallery",
-  "name": "reddgallery - Reddit Image & Video Viewer",
+  "short_name": "twiix",
+  "name": "twiix - Reddit Image & Video Viewer",
   "icons": [
     {
       "src": "favicon.ico",
