Dashboard implementation and TikTok implementation.

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ PORT=3000
 REACT_APP_CLERK_PUBLISHABLE_KEY=pk_test_bWF0dXJlLW11c3RhbmctMTIuY2xlcmsuYWNjb3VudHMuZGV2JA
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bWF0dXJlLW11c3RhbmctMTIuY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY=sk_test_FTtl0HwO5uk7d4Xzm2cO0hJxTz8VK98RFXYEMKtUCm
+DB_HOST=localhost
+DB_USER=u114685281_twiix
+DB_PASSWORD=zazzym-dipje9-Duhnyv
+DB_NAME=u114685281_twiix
