--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,11 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.13.23",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "mysql2": "^3.16.3",
     "node-fetch": "^2.7.0",
     "redgif": "^0.1.2"
   },
