Migrate from MySQL to MongoDB + add debug endpoint
- Replace MySQL with MongoDB Atlas for database
- Update server/config/db.js for MongoDB connection
- Update all API routes to use MongoDB queries
- Add /api/debug endpoint for database diagnostics
- Update environment variables (MONGODB_URI, DB_NAME)
- Update documentation for MongoDB schema

--- a/.env
+++ b/.env
@@ -1,11 +1,9 @@
 HOST=0.0.0.0
 PORT=3000
-# Uncomment the next line if you want to use HTTPS
-# HTTPS=true
 REACT_APP_CLERK_PUBLISHABLE_KEY=pk_test_bWF0dXJlLW11c3RhbmctMTIuY2xlcmsuYWNjb3VudHMuZGV2JA
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bWF0dXJlLW11c3RhbmctMTIuY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY=sk_test_FTtl0HwO5uk7d4Xzm2cO0hJxTz8VK98RFXYEMKtUCm
-DB_HOST=localhost
-DB_USER=u114685281_twiix
-DB_PASSWORD=zazzym-dipje9-Duhnyv
-DB_NAME=u114685281_twiix
+
+# MongoDB Configuration
+MONGODB_URI=mongodb+srv://twiix-dev:H32sA39kxpd69Y6M@cluster3.7mxgj4n.mongodb.net/?appName=Cluster3
+DB_NAME=twiix
