--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "mysql2": "^3.16.3",
+    "mongodb": "^6.21.0",
     "node-fetch": "^2.7.0",
     "redgif": "^0.1.2"
   },
