--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "lucide-react": "^0.479.0",
+    "mongodb": "^6.21.0",
     "mysql2": "^3.16.3",
     "node-fetch": "^2.7.0",
     "react": "^18.2.0",
